--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zobayer Web Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <nav>
@@ -32,6 +33,21 @@
         <div class="half-width">
             <img src="images/rsz_1rsz_1rsz_1profile1.png" alt="">
         </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width12">
+            <img src="images/p2.png" alt="">
+        </div>
+        <div class="half-width12">
+                <h1 class="ab"><b>About Me</b></h1>
+                <p class="p1">
+                    A Developer with strong passion for self-improvement. I have strong Problem Solving skills & bring energy, patience, positivity. I already learned the basic <span class="p">HTML5, CSS, JavaScript, ReactJS, NodeJS, MongoDB, MySQL, Python, FORTRAN, MATLAB,C++,Java,PHP</span> . I can build any simple website.
+                </p>
+                <a target="_blank" class="link-bt" href="https://www.facebook.com/ochena.akib/">Download CV</a>
+                
+
+        </div>
+
     </section>
 
    
