done sixth part

--- a/index.html
+++ b/index.html
@@ -104,22 +104,26 @@
             <h2>Full Stack Web Developer</h2>
             <h3 class="name">2021 - Present | Pro Level Web Developer</h3>
             <p>
-                I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I will give you 100% web solution.
             </p>
 
         </div>
         <div id="web-stack" class="profile1 single ">
             <h2>Graphics Designing</h2>
-            <h3 class="name">2020-2021 | Pro Level Graphics Designer</h3>
+            <h3 class="name">2020-Present | Pro Level Graphics Designer</h3>
 
-            <p>I have been working in the sector of Graphics Designing for almost 4 years. I have expertise in Photoshop and Illustrator.</p>
+            <p>I have been working in the sector of Graphics Designing for almost 4 years. I have expertise in Photoshop and Illustrator.Now I try to make mordern adn creative designs</p>
 
         </div>
 
     </section>
 
     <section class="contactbox">
-        <div class="chatbox"><a target="_blank" class="link" href="https://www.facebook.com/ochena.akib/">Let's Chat</a></div>
+        <div class="chatbox">
+            <h1 class="inquiry">WORK INQUIRY</h1>
+            <a target="_blank" class="link" href="https://www.facebook.com/ochena.akib/">Let's Chat</a>
+            
+        </div>
 
        
 
